fix: use calc to subtract header height from body height
- Set body height to calc(100% - 3.125rem) to account for header
- 3.125rem is the $library-header-height from units.css
- This prevents scrollbar from appearing due to overflow

--- a/src/components/koshien-test-modal/koshien-test-modal.css
+++ b/src/components/koshien-test-modal/koshien-test-modal.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     flex: 1;
     overflow: hidden;
+    height: calc(100% - 3.125rem);
 }
 
 .iframe {
